--- a/lille1-cat-card/src/css/index.css
+++ b/lille1-cat-card/src/css/index.css
@@ -11,3 +11,32 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.hide {
+  display: none;
+}
+
+.loader_img {
+  position: absolute;
+  z-index: 9999;
+  /* background : url('https://dribbble.com/shots/6321168-cat') 50% 50% no-repeat; */
+  cursor : wait;
+  display: block;
+	left: 50%;
+  top: 50%;
+	height: 30%;
+	-webkit-transform: translate( -50%, -50% );
+	transform: translate( -50%, -50% );
+}
+
+.loader {
+	position: fixed;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 10000;
+	overflow: hidden;
+	background: rgba( 255, 255, 255, 0.5 );
+}
+
